// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Request invite actions should dispatch invite success action if reqeustInvite thunk action is called with unknown response 1`] = `[Error: Unknown 200 response >>> UNKONWN]`;

exports[`Request invite actions should match snapshot for pure object actions 1`] = `
Object {
  "type": "REQUEST_INVITE_LOADING",
}
`;

exports[`Request invite actions should match snapshot for pure object actions 2`] = `
Object {
  "type": "REQUEST_INVITE_SUCCESS",
}
`;

exports[`Request invite actions should match snapshot for pure object actions 3`] = `
Object {
  "errorMsg": "FAIL MESSAGE",
  "type": "REQUEST_INVITE_FAIL",
}
`;

exports[`Request invite actions should match snapshot for pure object actions 4`] = `
Object {
  "type": "RESET_DIALOG_STATUS",
}
`;
